# realtime_whispyannote

./: .gitignore  README.md  device_list.py  dlannote.py  dlwhisper.py  docker-compose.yml  dockerfile  pyproject.toml
src/whispyannote/: cable.cpp  device_select.cpp  front.py  front.ui  main.py
